Fix download button alignment

--- a/src/components/DownloadIcon/DownloadIcon.module.scss
+++ b/src/components/DownloadIcon/DownloadIcon.module.scss
@@ -1,5 +1,5 @@
 .iconWrapper {
   position: absolute;
-  top: 44px;
-  right: 248px;
+  top: -30px;
+  right: -28px;
 }
