--- a/src/components/Resume/HeaderSection/HeaderSection.module.scss
+++ b/src/components/Resume/HeaderSection/HeaderSection.module.scss
@@ -15,6 +15,7 @@
 }
 
 .headerWrapper {
+  position: relative;
   display: inline-block;
   width: 100%;
 
